# pdf2md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
example/: noise2self_converted.md  noise2self_latexocr.md  noise2self_latexocr_display.md  noise2self_latexocr_display_review.md  noise2self_latexocr_v2.md  noise2self_latexocr_v3.md  noise2self_latexocr_v4.md  noise2self_marker.md
src/pdf2md_app/: __init__.py  cli.py  converter.py  html_bundle.py  review_cli.py  reviewer.py  web.py
src/pdf2md_app/templates/: index.html
